--- a/tailwindcss-styles/style.css
+++ b/tailwindcss-styles/style.css
@@ -576,8 +576,17 @@ video {
 .bottom-0 {
   bottom: 0;
 }
+.bottom-\[0px\] {
+  bottom: 0px;
+}
+.bottom-\[30px\] {
+  bottom: 30px;
+}
 .left-0 {
   left: 0;
+}
+.left-\[-60px\] {
+  left: -60px;
 }
 .left-\[20px\] {
   left: 20px;
@@ -587,6 +596,9 @@ video {
 }
 .right-0 {
   right: 0;
+}
+.right-\[-60px\] {
+  right: -60px;
 }
 .right-\[20px\] {
   right: 20px;
@@ -600,11 +612,17 @@ video {
 .top-0 {
   top: 0;
 }
+.top-\[0px\] {
+  top: 0px;
+}
 .top-\[110px\] {
   top: 110px;
 }
 .top-\[30px\] {
   top: 30px;
+}
+.top-\[33px\] {
+  top: 33px;
 }
 .top-\[50px\] {
   top: 50px;
@@ -612,44 +630,14 @@ video {
 .top-\[unset\] {
   top: unset;
 }
-.bottom-\[unset\] {
-  bottom: unset;
-}
-.top-\[33\] {
-  top: 33;
-}
-.top-\[33px\] {
-  top: 33px;
-}
-.bottom-\[80px\] {
-  bottom: 80px;
-}
-.bottom-\[30px\] {
-  bottom: 30px;
-}
-.left-\[unset\] {
-  left: unset;
-}
-.left-\[60px\] {
-  left: 60px;
-}
-.right-\[-60px\] {
-  right: -60px;
-}
-.bottom-\[0px\] {
-  bottom: 0px;
-}
-.top-\[0px\] {
-  top: 0px;
-}
-.left-\[-60px\] {
-  left: -60px;
-}
 .-z-10 {
   z-index: -10;
 }
 .z-\[-1\] {
   z-index: -1;
+}
+.z-\[1\] {
+  z-index: 1;
 }
 .z-\[2\] {
   z-index: 2;
@@ -668,15 +656,6 @@ video {
 }
 .z-\[999\] {
   z-index: 999;
-}
-.z-10 {
-  z-index: 10;
-}
-.z-\[1\] {
-  z-index: 1;
-}
-.z-\[0\] {
-  z-index: 0;
 }
 .order-1 {
   order: 1;
@@ -706,14 +685,6 @@ video {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
-}
-.my-8 {
-  margin-top: 80px;
-  margin-bottom: 80px;
-}
-.mx-\[-25\%\] {
-  margin-left: -25%;
-  margin-right: -25%;
 }
 .mb-4 {
   margin-bottom: 40px;
@@ -760,6 +731,9 @@ video {
 .hidden {
   display: none;
 }
+.aspect-\[11\/16\] {
+  aspect-ratio: 11/16;
+}
 .aspect-\[15\/16\] {
   aspect-ratio: 15/16;
 }
@@ -772,26 +746,11 @@ video {
 .aspect-video {
   aspect-ratio: 16 / 9;
 }
-.aspect-\[9\/16\] {
-  aspect-ratio: 9/16;
-}
-.aspect-\[10\/16\] {
-  aspect-ratio: 10/16;
-}
-.aspect-\[114\/16\] {
-  aspect-ratio: 114/16;
-}
-.aspect-\[14\/16\] {
-  aspect-ratio: 14/16;
-}
-.aspect-\[12\/16\] {
-  aspect-ratio: 12/16;
-}
-.aspect-\[11\/16\] {
-  aspect-ratio: 11/16;
-}
 .h-5 {
   height: 50px;
+}
+.h-\[1000px\] {
+  height: 1000px;
 }
 .h-\[100dvh\] {
   height: 100dvh;
@@ -802,6 +761,9 @@ video {
 .h-\[15px\] {
   height: 15px;
 }
+.h-\[180px\] {
+  height: 180px;
+}
 .h-\[18px\] {
   height: 18px;
 }
@@ -810,6 +772,9 @@ video {
 }
 .h-\[2px\] {
   height: 2px;
+}
+.h-\[30px\] {
+  height: 30px;
 }
 .h-\[337px\] {
   height: 337px;
@@ -829,6 +794,9 @@ video {
 .h-\[45px\] {
   height: 45px;
 }
+.h-\[499px\] {
+  height: 499px;
+}
 .h-\[500px\] {
   height: 500px;
 }
@@ -840,6 +808,9 @@ video {
 }
 .h-\[5px\] {
   height: 5px;
+}
+.h-\[80px\] {
+  height: 80px;
 }
 .h-\[calc\(100dvh-33px\)\] {
   height: calc(100dvh - 33px);
@@ -856,59 +827,14 @@ video {
 .h-full {
   height: 100%;
 }
-.h-\[auto\] {
-  height: auto;
-}
-.h-\[80px\] {
-  height: 80px;
-}
-.h-\[113px\] {
-  height: 113px;
-}
-.h-\[88px\] {
-  height: 88px;
-}
-.h-\[55px\] {
-  height: 55px;
-}
-.h-\[180px\] {
-  height: 180px;
-}
-.h-\[30px\] {
-  height: 30px;
-}
-.h-\[60ppx\] {
-  height: 60ppx;
-}
-.h-\[60px\] {
-  height: 60px;
-}
-.h-\[600px\] {
-  height: 600px;
-}
-.h-screen {
-  height: 100vh;
-}
-.h-\[640px\] {
-  height: 640px;
-}
-.h-\[499px\] {
-  height: 499px;
-}
-.h-\[1000px\] {
-  height: 1000px;
-}
 .max-h-\[unset\] {
   max-height: unset;
 }
-.max-h-\[500px\] {
-  max-height: 500px;
-}
-.min-h-full {
-  min-height: 100%;
-}
 .w-\[110px\] {
   width: 110px;
+}
+.w-\[150px\] {
+  width: 150px;
 }
 .w-\[163px\] {
   width: 163px;
@@ -921,6 +847,9 @@ video {
 }
 .w-\[305px\] {
   width: 305px;
+}
+.w-\[390px\] {
+  width: 390px;
 }
 .w-\[40\%\] {
   width: 40%;
@@ -937,6 +866,9 @@ video {
 .w-\[70px\] {
   width: 70px;
 }
+.w-\[calc\(100\%\+120px\)\] {
+  width: calc(100% + 120px);
+}
 .w-fit {
   width: -moz-fit-content;
   width: fit-content;
@@ -951,62 +883,20 @@ video {
 .w-screen {
   width: 100vw;
 }
-.w-\[200\%\] {
-  width: 200%;
+.w-\[566\] {
+  width: 566;
 }
-.w-\[120\%\] {
-  width: 120%;
-}
-.w-\[100\%\] {
-  width: 100%;
-}
-.w-\[calc\(100\%-120px\)\] {
-  width: calc(100% - 120px);
-}
-.w-\[calc\(100\%\+120px\)\] {
-  width: calc(100% + 120px);
-}
-.w-auto {
-  width: auto;
-}
-.w-\[452px\] {
-  width: 452px;
-}
-.w-\[693px\] {
-  width: 693px;
-}
-.w-\[390px\] {
-  width: 390px;
-}
-.w-\[3100px\] {
-  width: 3100px;
-}
-.w-\[100px\] {
-  width: 100px;
-}
-.w-\[150px\] {
-  width: 150px;
-}
-.w-\[564px\] {
-  width: 564px;
-}
-.w-\[50\%\] {
-  width: 50%;
-}
-.w-\[604px\] {
-  width: 604px;
-}
-.w-\[384px\] {
-  width: 384px;
-}
-.min-w-full {
-  min-width: 100%;
+.w-\[566px\] {
+  width: 566px;
 }
 .max-w-\[1043px\] {
   max-width: 1043px;
 }
 .max-w-\[206px\] {
   max-width: 206px;
+}
+.max-w-\[350px\] {
+  max-width: 350px;
 }
 .max-w-\[354px\] {
   max-width: 354px;
@@ -1017,20 +907,9 @@ video {
 .max-w-\[89px\] {
   max-width: 89px;
 }
-.max-w-\[360px\] {
-  max-width: 360px;
-}
-.max-w-\[350px\] {
-  max-width: 350px;
-}
 .scale-105 {
   --tw-scale-x: 1.05;
   --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.scale-100 {
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .transform {
@@ -1044,9 +923,6 @@ video {
 }
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-.flex-row {
-  flex-direction: row;
 }
 .flex-col {
   flex-direction: column;
@@ -1143,6 +1019,10 @@ video {
 .rounded-full {
   border-radius: 9999px;
 }
+.bg-\[\#000\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
 .bg-\[\#0A1F161A\] {
   background-color: #0A1F161A;
 }
@@ -1153,6 +1033,10 @@ video {
 .bg-\[\#142C2B\] {
   --tw-bg-opacity: 1;
   background-color: rgb(20 44 43 / var(--tw-bg-opacity));
+}
+.bg-\[\#2B2828\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 40 40 / var(--tw-bg-opacity));
 }
 .bg-\[\#438645\] {
   --tw-bg-opacity: 1;
@@ -1190,6 +1074,9 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(243 243 243 / var(--tw-bg-opacity));
 }
+.bg-\[transparent\] {
+  background-color: transparent;
+}
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(10 31 22 / var(--tw-bg-opacity));
@@ -1202,34 +1089,8 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
-.bg-\[transparent\] {
-  background-color: transparent;
-}
-.bg-\[\#000\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-.bg-\[\#2B2828\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(43 40 40 / var(--tw-bg-opacity));
-}
 .bg-gradient-to-b {
   background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
-}
-.from-\[transparent\] {
-  --tw-gradient-from: transparent var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-.from-black {
-  --tw-gradient-from: #0A1F16 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(10 31 22 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-.from-transparent {
-  --tw-gradient-from: transparent var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 .from-\[\#000\] {
   --tw-gradient-from: #000 var(--tw-gradient-from-position);
@@ -1241,27 +1102,31 @@ video {
   --tw-gradient-to: rgb(7 19 3 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
+.from-\[transparent\] {
+  --tw-gradient-from: transparent var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.from-transparent {
+  --tw-gradient-from: transparent var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
 .via-\[\#0a1f169b\] {
   --tw-gradient-to: rgb(10 31 22 / 0)  var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), #0a1f169b var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
-.to-\[\#0a1f16\] {
-  --tw-gradient-to: #0a1f16 var(--tw-gradient-to-position);
-}
-.to-transparent {
-  --tw-gradient-to: transparent var(--tw-gradient-to-position);
-}
-.to-black {
-  --tw-gradient-to: #0A1F16 var(--tw-gradient-to-position);
-}
 .to-\[\#000\] {
   --tw-gradient-to: #000 var(--tw-gradient-to-position);
 }
-.to-\[\#0B1F04\] {
-  --tw-gradient-to: #0B1F04 var(--tw-gradient-to-position);
+.to-\[\#0a1f16\] {
+  --tw-gradient-to: #0a1f16 var(--tw-gradient-to-position);
 }
 .to-\[\#102D06\] {
   --tw-gradient-to: #102D06 var(--tw-gradient-to-position);
+}
+.to-transparent {
+  --tw-gradient-to: transparent var(--tw-gradient-to-position);
 }
 .bg-cover {
   background-size: cover;
@@ -1301,6 +1166,10 @@ video {
   padding-left: 12px;
   padding-right: 12px;
 }
+.px-\[20px\] {
+  padding-left: 20px;
+  padding-right: 20px;
+}
 .py-12 {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -1322,14 +1191,6 @@ video {
   padding-bottom: 60px;
 }
 .py-\[80px\] {
-  padding-top: 80px;
-  padding-bottom: 80px;
-}
-.px-\[20px\] {
-  padding-left: 20px;
-  padding-right: 20px;
-}
-.py-8 {
   padding-top: 80px;
   padding-bottom: 80px;
 }
@@ -1357,11 +1218,17 @@ video {
 .pb-7 {
   padding-bottom: 70px;
 }
+.pb-8 {
+  padding-bottom: 80px;
+}
 .pb-\[120px\] {
   padding-bottom: 120px;
 }
 .pb-\[25px\] {
   padding-bottom: 25px;
+}
+.pb-\[30px\] {
+  padding-bottom: 30px;
 }
 .pb-\[3px\] {
   padding-bottom: 3px;
@@ -1422,12 +1289,6 @@ video {
 }
 .pt-\[80px\] {
   padding-top: 80px;
-}
-.pb-\[30px\] {
-  padding-bottom: 30px;
-}
-.pb-8 {
-  padding-bottom: 80px;
 }
 .text-center {
   text-align: center;
@@ -1557,14 +1418,6 @@ video {
 .opacity-\[0\.5\] {
   opacity: 0.5;
 }
-.drop-shadow-\[0_35px_35px_rgba\(0\2c 0\2c 0\2c 0\.25\)\] {
-  --tw-drop-shadow: drop-shadow(0 35px 35px rgba(0,0,0,0.25));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-.drop-shadow-\[0px_0px_15px_rgba\(0\2c 0\2c 0\2c 0\.25\)\] {
-  --tw-drop-shadow: drop-shadow(0px 0px 15px rgba(0,0,0,0.25));
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
 .drop-shadow-\[0px_0px_15px_\#8CC63F\] {
   --tw-drop-shadow: drop-shadow(0px 0px 15px #8CC63F);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -1611,16 +1464,16 @@ video {
 }
 @media (min-width: 768px) {
 
+  .md\:bottom-\[50px\] {
+    bottom: 50px;
+  }
+
   .md\:left-\[80px\] {
     left: 80px;
   }
 
   .md\:top-\[150px\] {
     top: 150px;
-  }
-
-  .md\:bottom-\[50px\] {
-    bottom: 50px;
   }
 
   .md\:order-1 {
@@ -1687,8 +1540,16 @@ video {
     height: 450px;
   }
 
+  .md\:h-\[50px\] {
+    height: 50px;
+  }
+
   .md\:h-\[55px\] {
     height: 55px;
+  }
+
+  .md\:h-\[674px\] {
+    height: 674px;
   }
 
   .md\:h-\[calc\(100dvh-200px\)\] {
@@ -1697,14 +1558,6 @@ video {
 
   .md\:h-screen {
     height: 100vh;
-  }
-
-  .md\:h-\[50px\] {
-    height: 50px;
-  }
-
-  .md\:h-\[674px\] {
-    height: 674px;
   }
 
   .md\:max-h-\[768px\] {
@@ -1719,16 +1572,12 @@ video {
     width: 348px;
   }
 
-  .md\:w-\[524px\] {
-    width: 524px;
-  }
-
   .md\:w-\[481px\] {
     width: 481px;
   }
 
-  .md\:w-\[369px\] {
-    width: 369px;
+  .md\:w-\[524px\] {
+    width: 524px;
   }
 
   .md\:max-w-\[176px\] {
@@ -1737,6 +1586,14 @@ video {
 
   .md\:max-w-\[373px\] {
     max-width: 373px;
+  }
+
+  .md\:max-w-\[426px\] {
+    max-width: 426px;
+  }
+
+  .md\:max-w-\[481px\] {
+    max-width: 481px;
   }
 
   .md\:max-w-\[600px\] {
@@ -1749,22 +1606,6 @@ video {
 
   .md\:max-w-\[unset\] {
     max-width: unset;
-  }
-
-  .md\:max-w-\[426px\] {
-    max-width: 426px;
-  }
-
-  .md\:max-w-\[603\] {
-    max-width: 603;
-  }
-
-  .md\:max-w-\[381px\] {
-    max-width: 381px;
-  }
-
-  .md\:max-w-\[481px\] {
-    max-width: 481px;
   }
 
   .md\:grid-cols-2 {
@@ -1810,11 +1651,6 @@ video {
     padding-bottom: 45px;
   }
 
-  .md\:py-5 {
-    padding-top: 50px;
-    padding-bottom: 50px;
-  }
-
   .md\:pb-0 {
     padding-bottom: 0;
   }
@@ -1835,6 +1671,10 @@ video {
     padding-bottom: 37px;
   }
 
+  .md\:pb-\[50px\] {
+    padding-bottom: 50px;
+  }
+
   .md\:pb-\[54px\] {
     padding-bottom: 54px;
   }
@@ -1843,20 +1683,16 @@ video {
     padding-top: 35.5px;
   }
 
+  .md\:pt-\[50px\] {
+    padding-top: 50px;
+  }
+
   .md\:pt-\[60px\] {
     padding-top: 60px;
   }
 
   .md\:pt-\[unset\] {
     padding-top: unset;
-  }
-
-  .md\:pb-\[50px\] {
-    padding-bottom: 50px;
-  }
-
-  .md\:pt-\[50px\] {
-    padding-top: 50px;
   }
 
   .md\:text-center {
@@ -1945,6 +1781,10 @@ video {
     bottom: 65px;
   }
 
+  .lg\:bottom-\[80px\] {
+    bottom: 80px;
+  }
+
   .lg\:left-\[40px\] {
     left: 40px;
   }
@@ -1961,16 +1801,22 @@ video {
     top: 50px;
   }
 
-  .lg\:bottom-\[80px\] {
-    bottom: 80px;
-  }
-
   .lg\:order-1 {
     order: 1;
   }
 
   .lg\:order-2 {
     order: 2;
+  }
+
+  .lg\:mx-\[-20\%\] {
+    margin-left: -20%;
+    margin-right: -20%;
+  }
+
+  .lg\:mx-\[-33\%\] {
+    margin-left: -33%;
+    margin-right: -33%;
   }
 
   .lg\:mx-\[40px\] {
@@ -1981,21 +1827,6 @@ video {
   .lg\:mx-\[unset\] {
     margin-left: unset;
     margin-right: unset;
-  }
-
-  .lg\:mx-\[-25\%\] {
-    margin-left: -25%;
-    margin-right: -25%;
-  }
-
-  .lg\:mx-\[-33\%\] {
-    margin-left: -33%;
-    margin-right: -33%;
-  }
-
-  .lg\:mx-\[-20\%\] {
-    margin-left: -20%;
-    margin-right: -20%;
   }
 
   .lg\:mb-\[25px\] {
@@ -2058,20 +1889,20 @@ video {
     height: 50vw;
   }
 
-  .lg\:h-\[58\.5px\] {
-    height: 58.5px;
+  .lg\:h-\[533px\] {
+    height: 533px;
   }
 
-  .lg\:h-\[calc\(100dvh-33px\)\] {
-    height: calc(100dvh - 33px);
+  .lg\:h-\[58\.5px\] {
+    height: 58.5px;
   }
 
   .lg\:h-\[80px\] {
     height: 80px;
   }
 
-  .lg\:h-\[533px\] {
-    height: 533px;
+  .lg\:h-\[calc\(100dvh-33px\)\] {
+    height: calc(100dvh - 33px);
   }
 
   .lg\:max-h-\[calc\(50vw-60px\)\] {
@@ -2094,6 +1925,10 @@ video {
     width: 348px;
   }
 
+  .lg\:w-\[376px\] {
+    width: 376px;
+  }
+
   .lg\:w-\[506px\] {
     width: 506px;
   }
@@ -2108,14 +1943,6 @@ video {
 
   .lg\:w-\[60\%\] {
     width: 60%;
-  }
-
-  .lg\:w-\[604px\] {
-    width: 604px;
-  }
-
-  .lg\:w-\[376px\] {
-    width: 376px;
   }
 
   .lg\:w-\[630px\] {
@@ -2134,8 +1961,16 @@ video {
     max-width: 333px;
   }
 
+  .lg\:max-w-\[510px\] {
+    max-width: 510px;
+  }
+
   .lg\:max-w-\[569px\] {
     max-width: 569px;
+  }
+
+  .lg\:max-w-\[604px\] {
+    max-width: 604px;
   }
 
   .lg\:max-w-\[747\] {
@@ -2146,36 +1981,12 @@ video {
     max-width: 912px;
   }
 
-  .lg\:max-w-\[unset\] {
-    max-width: unset;
-  }
-
-  .lg\:max-w-\[604px\] {
-    max-width: 604px;
-  }
-
-  .lg\:max-w-\[570px\] {
-    max-width: 570px;
-  }
-
-  .lg\:max-w-\[1145px\] {
-    max-width: 1145px;
-  }
-
-  .lg\:max-w-\[996\] {
-    max-width: 996;
-  }
-
   .lg\:max-w-\[996px\] {
     max-width: 996px;
   }
 
-  .lg\:max-w-\[456px\] {
-    max-width: 456px;
-  }
-
-  .lg\:max-w-\[510px\] {
-    max-width: 510px;
+  .lg\:max-w-\[unset\] {
+    max-width: unset;
   }
 
   .lg\:grid-cols-2 {
@@ -2238,11 +2049,6 @@ video {
     padding-bottom: unset;
   }
 
-  .lg\:py-8 {
-    padding-top: 80px;
-    padding-bottom: 80px;
-  }
-
   .lg\:pb-2 {
     padding-bottom: 20px;
   }
@@ -2253,6 +2059,10 @@ video {
 
   .lg\:pb-\[37px\] {
     padding-bottom: 37px;
+  }
+
+  .lg\:pb-\[80px\] {
+    padding-bottom: 80px;
   }
 
   .lg\:pb-\[81px\] {
@@ -2267,16 +2077,12 @@ video {
     padding-top: 34px;
   }
 
-  .lg\:pt-\[unset\] {
-    padding-top: unset;
-  }
-
-  .lg\:pb-\[80px\] {
-    padding-bottom: 80px;
-  }
-
   .lg\:pt-\[80px\] {
     padding-top: 80px;
+  }
+
+  .lg\:pt-\[unset\] {
+    padding-top: unset;
   }
 
   .lg\:text-left {
@@ -2417,20 +2223,28 @@ video {
     width: 308px;
   }
 
-  .xl\:w-\[590px\] {
-    width: 590px;
-  }
-
   .xl\:w-\[452px\] {
     width: 452px;
+  }
+
+  .xl\:w-\[590px\] {
+    width: 590px;
   }
 
   .xl\:w-\[693px\] {
     width: 693px;
   }
 
+  .xl\:max-w-\[1145px\] {
+    max-width: 1145px;
+  }
+
   .xl\:max-w-\[233px\] {
     max-width: 233px;
+  }
+
+  .xl\:max-w-\[570px\] {
+    max-width: 570px;
   }
 
   .xl\:max-w-\[653px\] {
@@ -2439,14 +2253,6 @@ video {
 
   .xl\:max-w-\[893px\] {
     max-width: 893px;
-  }
-
-  .xl\:max-w-\[1145px\] {
-    max-width: 1145px;
-  }
-
-  .xl\:max-w-\[570px\] {
-    max-width: 570px;
   }
 
   .xl\:gap-y-\[60px\] {
