--- a/assets/scss/assets/_slider.scss
+++ b/assets/scss/assets/_slider.scss
@@ -107,6 +107,10 @@
   opacity: 1 !important;
 }
 
+.mySwiper-video.swiper {
+  padding: 0 10% !important;
+}
+
 
 // .mySwiper-video {
 //   .swiper-slide {
