--- a/assets/scss/assets/_slider.scss
+++ b/assets/scss/assets/_slider.scss
@@ -16,19 +16,6 @@
 
 
 
-.swiper-button-next:after {
-  content: url(/wp-content/themes/freekvonk/img/icon/next-nav.svg);
-  height: 61px;
-}
-
-.swiper-button-prev:after {
-  content: url(/wp-content/themes/freekvonk/img/icon/prev-nav.svg);
-  height: 61px;
-}
-
-
-
-
 .swiper-section {
   .mySwiper-d3 {
     .swiper-slide {
@@ -42,9 +29,21 @@
 
   }
 
+}
+
+
+
+@media (min-width: 1280px) {
+
+  .swiper-button-next-video,
+  .swiper-button-next-foto,
   .swiper-button-next {
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
     display: block;
     right: 30px;
+    z-index: 100;
 
     &:after {
       content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20.097" height="35.559" viewBox="0 0 20.097 35.559"><path id="Path_1128" data-name="Path 1128" d="M0,0,10.583,1.033l2.7.263,6.64.648" transform="translate(3.693 2.318) rotate(45)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/><line id="Line_192" data-name="Line 192" y1="1.945" x2="19.921" transform="translate(17.779 19.154) rotate(135)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/></svg>');
@@ -55,8 +54,14 @@
     }
   }
 
+  .swiper-button-prev-video,
+  .swiper-button-prev-foto,
   .swiper-button-prev {
     display: block;
+    position: absolute;
+    z-index: 100;
+    top: 50%;
+    transform: translate(-50%, -50%);
     left: 30px;
 
     &:after {
@@ -69,47 +74,58 @@
   }
 }
 
-.swiper-button-next-video {
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  display: block;
-  right: 30px;
-  z-index: 100;
 
-  &:after {
-    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20.097" height="35.559" viewBox="0 0 20.097 35.559"><path id="Path_1128" data-name="Path 1128" d="M0,0,10.583,1.033l2.7.263,6.64.648" transform="translate(3.693 2.318) rotate(45)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/><line id="Line_192" data-name="Line 192" y1="1.945" x2="19.921" transform="translate(17.779 19.154) rotate(135)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/></svg>');
-    justify-content: flex-end;
-    height: auto;
-    width: 100%;
-    display: flex;
+
+.image-format {
+  width: auto;
+  height: 100%;
+  max-width: 294px;
+  max-height: 232px;
+
+
+  @media (min-width: 768px) {
+    max-height: 329px;
+    max-width: 418px;
+  }
+
+  @media (min-width: 768px) {
+    max-height: 600px;
+    max-width: 600px;
+  }
+
+  @media (min-width: 1280px) {
+    max-height: 484px;
+    max-width: 604px;
   }
 }
 
-.swiper-button-prev-video {
-  display: block;
-  position: absolute;
-  z-index: 100;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  left: 30px;
-
-  &:after {
-    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20.097" height="35.561" viewBox="0 0 20.097 35.561"><line id="Line_190" data-name="Line 190" x2="19.921" y2="1.945" transform="translate(16.403 33.242) rotate(-135)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/><line id="Line_191" data-name="Line 191" y1="1.945" x2="19.921" transform="translate(2.317 16.404) rotate(-45)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/></svg>');
-    justify-content: flex-start;
-    height: auto;
-    width: 100%;
-    display: flex;
+.mySwiper-foto,
+.mySwiper-video {
+  .swiper-wrapper {
+    padding-left: 30px;
   }
 }
 
-.watched {
-  opacity: 1 !important;
-}
 
-.mySwiper-video.swiper {
-  padding: 0 10% !important;
-}
+
+// .mySwiper-foto {
+//   .swiper-slide {
+//     flex-shrink: unset;
+//     width: 100%;
+//     height: 100%;
+//     position: relative;
+//     transition-property: transform;
+//   }
+// }
+
+
+// .bg-right-gradient {
+//   background: linear-gradient(270deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
+// }
+
+// .bg-left-gradient {
+//   background: linear-gradient(90deg, rgba(0, 0, 0, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
+// }
 
 
 // .mySwiper-video {
