--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -84,56 +84,6 @@ a.underline-effect:hover::after {
   height: 0;
   transition: height 0.2s ease-out;
 }
-.add-popup .quantity {
-  display: none !important;
-}
-.add-popup .label {
-  display: none !important;
-}
-.add-popup .reset_variations {
-  display: none !important;
-}
-.add-popup .button {
-  width: 100% !important;
-  background: #8cc63f !important;
-  z-index: 1 !important;
-  font-family: Tanker, sans-serif !important;
-  font-size: 25px !important;
-  line-height: 25px !important;
-  display: flex !important;
-  justify-content: center !important;
-  align-items: center !important;
-  padding-top: 10px !important;
-  padding-bottom: 10px !important;
-}
-.add-popup .variations ul {
-  display: flex !important;
-  flex-wrap: wrap !important;
-  justify-content: center !important;
-  align-items: center !important;
-  padding: 0 !important;
-  margin: 0 !important;
-  padding-bottom: 8px !important;
-  padding-top: 7px !important;
-}
-.add-popup .variations ul li {
-  border: 1px solid #0a1f16 !important;
-  padding: 12px !important;
-  font-size: 11px !important;
-  line-height: 11px !important;
-  font-family: Karlsen, sans-serif !important;
-  color: #2b2828 !important;
-  margin-right: 8px !important;
-  cursor: pointer !important;
-}
-.add-popup .variations ul li:last-of-type {
-  margin-right: 0 !important;
-}
-.add-popup .variations ul li:focus {
-  background: #8cc63f !important;
-  color: #fff !important;
-  border: 1px solid #8cc63f !important;
-}
 .swiperhero > .swiper-wrapper {
   transition-timing-function: linear;
 }
@@ -150,14 +100,6 @@ html {
 body {
   overflow-x: hidden;
   width: 100vw;
-}
-main {
-  padding-top: 115px;
-}
-.woocommerce img,
-.woocommerce-page img {
-  height: 100% !important;
-  max-width: 100% !important;
 }
 .h-screen {
   height: calc(var(--vh, 1vh) * 100);
@@ -407,22 +349,6 @@ a:hover .hover-blur {
     width: 100% !important;
   }
 }
-.product-item .product-add {
-  bottom: -100% !important;
-  transition-duration: 0.3s;
-}
-.product-item:hover .product-add {
-  bottom: 8px !important;
-  transition-duration: 0.3s;
-}
-.product-item .add-popup {
-  bottom: -100% !important;
-  transition-duration: 0.3s;
-}
-.product-item:hover .add-popup.active {
-  bottom: 8px !important;
-  transition-duration: 0.3s;
-}
 .mySwiper-navigatie .swiper-slide {
   opacity: 0 !important;
   transition-duration: 0s !important;
@@ -434,75 +360,77 @@ a:hover .hover-blur {
   visibility: visible;
   pointer-events: auto !important;
 }
-.swiper-button-next:after {
-  content: url(/wp-content/themes/freekvonk/img/icon/next-nav.svg);
-  height: 61px;
-}
-.swiper-button-prev:after {
-  content: url(/wp-content/themes/freekvonk/img/icon/prev-nav.svg);
-  height: 61px;
-}
 .swiper-section .mySwiper-d3 .swiper-slide {
   opacity: 0.5;
 }
 .swiper-section .mySwiper-d3 .swiper-slide-active {
   opacity: 1;
 }
-.swiper-section .swiper-button-next {
-  display: block;
-  right: 30px;
+@media (min-width: 1280px) {
+  .swiper-button-next-video,
+  .swiper-button-next-foto,
+  .swiper-button-next {
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: block;
+    right: 30px;
+    z-index: 100;
+  }
+  .swiper-button-next-video:after,
+  .swiper-button-next-foto:after,
+  .swiper-button-next:after {
+    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20.097" height="35.559" viewBox="0 0 20.097 35.559"><path id="Path_1128" data-name="Path 1128" d="M0,0,10.583,1.033l2.7.263,6.64.648" transform="translate(3.693 2.318) rotate(45)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/><line id="Line_192" data-name="Line 192" y1="1.945" x2="19.921" transform="translate(17.779 19.154) rotate(135)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/></svg>');
+    justify-content: flex-end;
+    height: auto;
+    width: 100%;
+    display: flex;
+  }
+  .swiper-button-prev-video,
+  .swiper-button-prev-foto,
+  .swiper-button-prev {
+    display: block;
+    position: absolute;
+    z-index: 100;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    left: 30px;
+  }
+  .swiper-button-prev-video:after,
+  .swiper-button-prev-foto:after,
+  .swiper-button-prev:after {
+    content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20.097" height="35.561" viewBox="0 0 20.097 35.561"><line id="Line_190" data-name="Line 190" x2="19.921" y2="1.945" transform="translate(16.403 33.242) rotate(-135)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/><line id="Line_191" data-name="Line 191" y1="1.945" x2="19.921" transform="translate(2.317 16.404) rotate(-45)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/></svg>');
+    justify-content: flex-start;
+    height: auto;
+    width: 100%;
+    display: flex;
+  }
 }
-.swiper-section .swiper-button-next:after {
-  content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20.097" height="35.559" viewBox="0 0 20.097 35.559"><path id="Path_1128" data-name="Path 1128" d="M0,0,10.583,1.033l2.7.263,6.64.648" transform="translate(3.693 2.318) rotate(45)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/><line id="Line_192" data-name="Line 192" y1="1.945" x2="19.921" transform="translate(17.779 19.154) rotate(135)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/></svg>');
-  justify-content: flex-end;
-  height: auto;
-  width: 100%;
-  display: flex;
+.image-format {
+  width: auto;
+  height: 100%;
+  max-width: 294px;
+  max-height: 232px;
 }
-.swiper-section .swiper-button-prev {
-  display: block;
-  left: 30px;
+@media (min-width: 768px) {
+  .image-format {
+    max-height: 329px;
+    max-width: 418px;
+  }
 }
-.swiper-section .swiper-button-prev:after {
-  content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20.097" height="35.561" viewBox="0 0 20.097 35.561"><line id="Line_190" data-name="Line 190" x2="19.921" y2="1.945" transform="translate(16.403 33.242) rotate(-135)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/><line id="Line_191" data-name="Line 191" y1="1.945" x2="19.921" transform="translate(2.317 16.404) rotate(-45)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/></svg>');
-  justify-content: flex-start;
-  height: auto;
-  width: 100%;
-  display: flex;
+@media (min-width: 768px) {
+  .image-format {
+    max-height: 600px;
+    max-width: 600px;
+  }
 }
-.swiper-button-next-video {
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  display: block;
-  right: 30px;
-  z-index: 100;
+@media (min-width: 1280px) {
+  .image-format {
+    max-height: 484px;
+    max-width: 604px;
+  }
 }
-.swiper-button-next-video:after {
-  content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20.097" height="35.559" viewBox="0 0 20.097 35.559"><path id="Path_1128" data-name="Path 1128" d="M0,0,10.583,1.033l2.7.263,6.64.648" transform="translate(3.693 2.318) rotate(45)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/><line id="Line_192" data-name="Line 192" y1="1.945" x2="19.921" transform="translate(17.779 19.154) rotate(135)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/></svg>');
-  justify-content: flex-end;
-  height: auto;
-  width: 100%;
-  display: flex;
-}
-.swiper-button-prev-video {
-  display: block;
-  position: absolute;
-  z-index: 100;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  left: 30px;
-}
-.swiper-button-prev-video:after {
-  content: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20.097" height="35.561" viewBox="0 0 20.097 35.561"><line id="Line_190" data-name="Line 190" x2="19.921" y2="1.945" transform="translate(16.403 33.242) rotate(-135)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/><line id="Line_191" data-name="Line 191" y1="1.945" x2="19.921" transform="translate(2.317 16.404) rotate(-45)" fill="none" stroke="%23fff" stroke-linecap="round" stroke-width="3"/></svg>');
-  justify-content: flex-start;
-  height: auto;
-  width: 100%;
-  display: flex;
-}
-.watched {
-  opacity: 1 !important;
-}
-.mySwiper-video.swiper {
-  padding: 0 10% !important;
+.mySwiper-foto .swiper-wrapper,
+.mySwiper-video .swiper-wrapper {
+  padding-left: 30px;
 } /*# sourceMappingURL=main.css.map */
