--- a/assets/scss/assets/_cards.scss
+++ b/assets/scss/assets/_cards.scss
@@ -1,3 +1,19 @@
 .team-block.list-b-none .post:nth-of-type(n+5) {
     display: none;
 }
+
+.item {
+    display: none;
+}
+
+@media (min-width: 1280px) {
+    .item:nth-child(-n+9) {
+        display: block;
+    }
+}
+
+@media (max-width: 1280px) {
+    .item:nth-child(-n+3) {
+        display: block;
+    }
+}
