--- a/assets/scss/assets/_form.scss
+++ b/assets/scss/assets/_form.scss
@@ -58,3 +58,15 @@
         }
     }
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none !important;
+    margin: 0 !important;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance: textfield !important;
+}
