--- a/assets/scss/assets/_algemeen.scss
+++ b/assets/scss/assets/_algemeen.scss
@@ -210,8 +210,10 @@ html {
 .bg-diepgroen,
 .bg-lichtgroen,
 .bg-groen,
+.bg-lichtoranje,
 .bg-bruin,
-.bg-donkergrijs {
+.bg-donkergrijs,
+.bg-transwit {
   .text-color {
     color: #fff !important;
   }
@@ -219,9 +221,9 @@ html {
 
 .bg-wit,
 .bg-beige,
-.bg-lichtoranje,
 .bg-lichtgrijs,
-.bg-grijs {
+.bg-grijs,
+.bg-transzwart {
   .text-color {
     color: #0A1F16 !important;
   }
