--- a/assets/scss/assets/_acf.scss
+++ b/assets/scss/assets/_acf.scss
@@ -1,4 +1,4 @@
-.block-editor-page .swiper-wrapper {
-    display: flex;
-    gap: 50px;
-}
+// .block-editor-page .swiper-wrapper {
+//     display: flex;
+//     gap: 50px;
+// }
