--- a/assets/scss/assets/_woocommerce.scss
+++ b/assets/scss/assets/_woocommerce.scss
@@ -976,3 +976,8 @@ html .wpc-filters-range-inputs .ui-button.ui-state-disabled:hover {
     margin-right: 20px !important;
     margin-left: 20px !important;
 }
+
+
+.woocommerce-checkout.woocommerce-order-received .freek-checkout {
+    display: none !important;
+}
